feat(rust): 基于2024-2025研究成果优化Rust agents和skills
- 升级dev/debug/test/perf agents: XML标签结构, Red Flags表, 工作流
- 优化core/memory/async/macros/unsafe skills: Rust 2024 edition, thiserror 2.x, Axum, cargo-nextest